--- a/03.microservices/api-gateway/src/main/resources/application.properties
+++ b/03.microservices/api-gateway/src/main/resources/application.properties
@@ -6,4 +6,7 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 #spring.cloud.gateway.discovery.locator.enabled=true
 #spring.cloud.gateway.discovery.locator.lowerCaseServiceId=true
 
-spring.sleuth.sampler.probability=1.0
+# spring.sleuth.sampler.probability=1.0
+management.tracing.sampling.probability=1.0
+
+spring.config.import=optional:configserver:
