--- a/03.microservices/currency-conversion-service/src/main/resources/application.properties
+++ b/03.microservices/currency-conversion-service/src/main/resources/application.properties
@@ -3,4 +3,7 @@ server.port=8100
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
-spring.sleuth.sampler.probability=1.0
+management.tracing.sampling.probability=1.0
+
+# traceID and spanId are predefined MDC keys - we want the logs to include them
+logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
